chore: bump version to 0.2.1
- Update agent and web package versions to 0.2.1
- Improve package description for better discoverability
- Fix license from MIT to Apache-2.0
- Add shebang to bin/viberra-agent.mjs
- Add comprehensive README.md for npm package
- Add v0.2.1 changelog entry to main README

--- a/services/agent/package.json
+++ b/services/agent/package.json
@@ -1,7 +1,7 @@
 {
   "name": "viberra",
-  "version": "0.2.0",
-  "description": "Local PTY ↔ WebRTC agent for Viberra - secure remote terminal access",
+  "version": "0.2.1",
+  "description": "Secure P2P terminal access - end-to-end encrypted WebRTC, no SSH, VPNs or port forwarding",
   "type": "module",
   "bin": {
     "viberra-agent": "./bin/viberra-agent.mjs",
@@ -22,7 +22,7 @@
     "e2ee"
   ],
   "author": "Kirill Ribkin <kirillribkin1998@gmail.com>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/kirillribkin/viberra.git",
